// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button w=\\"100px\\">Submit</Button>
</Frame>;
"
`;

exports[`card with no border radius on image default 1`] = `
"<Frame width={300} height={400}>
  <Box
    display=\\"flex\\"
    flexDirection=\\"column\\"
    bgColor=\\"#fff\\"
    p=\\"1rem\\"
    shadow=\\"0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)\\"
    rounded=\\"0.375rem\\"
    w=\\"300px\\"
    h=\\"400px\\"
  >
    <Image
      src=\\"https://placekitten.com/300/300\\"
      minH={0}
      objectFit=\\"cover\\"
      rounded=\\"0px\\"
      flex=\\"1\\"
    />
    <Box display=\\"flex\\" mt=\\"1rem\\">
      <Text fontSize=\\"xl\\" flex=\\"1\\">
        News
      </Text>
    </Box>
    <Box display=\\"flex\\" mt=\\"0.25rem\\">
      <Text flex=\\"1\\">
        Here you can explore the latest news and information.
      </Text>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`element as prop default 1`] = `
"<Frame width={100} height={40}>
  <Box
    style={{ display: 'flex', alignItems: 'center', width: 100, height: 40 }}
  >
    <FormControlLabel
      control={<Checkbox checked={false} disabled={false} />}
      label=\\"Hello world\\"
    />
  </Box>
</Frame>;
"
`;

exports[`generate file chakra 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { ChakraProvider, Box } from '@chakra-ui/react';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return <ChakraProvider />;
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@chakra-ui/react\\": \\"^2\\",
    \\"@chakra-ui/system\\": \\"^2\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"framer-motion\\": \\"^10\\",
    \\"@chakra-ui/icons\\": \\"^2\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`generate file mui 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { ThemeProvider, Box, FormControlLabel, Checkbox } from '@mui/material';
import '@fontsource/roboto/latin.css';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return (
    <ThemeProvider>
      <Frame width={100} height={40}>
        <Box
          style={{
            display: 'flex',
            alignItems: 'center',
            width: 100,
            height: 40,
          }}
        >
          <FormControlLabel
            control={<Checkbox checked={false} disabled={false} />}
            label=\\"Hello world\\"
          />
        </Box>
      </Frame>
    </ThemeProvider>
  );
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@mui/material\\": \\"^5\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"@mui/icons-material\\": \\"^5\\",
    \\"@fontsource/roboto\\": \\"^5\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`hero default 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    flexDirection=\\"column\\"
    p=\\"1rem\\"
    gap=\\"0.75rem\\"
    justifyContent=\\"center\\"
    alignItems=\\"center\\"
    w=\\"400px\\"
    h=\\"400px\\"
  >
    <Box display=\\"flex\\" bgColor=\\"transparent\\" flexDirection=\\"column\\">
      <Text flex=\\"1\\" textAlign=\\"center\\" textColor=\\"#3b82f6\\" fontWeight=\\"700\\">
        The future is here
      </Text>
      <Box display=\\"flex\\">
        <Text fontSize=\\"5xl\\" flex=\\"1\\" textAlign=\\"center\\">
          Create, iterate, inspire.
        </Text>
      </Box>
    </Box>
    <Box display=\\"flex\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"center\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      display=\\"flex\\"
      bgColor=\\"transparent\\"
      flexDirection=\\"row\\"
      alignItems=\\"center\\"
      gap=\\"1.5rem\\"
      mt=\\"1rem\\"
    >
      <Button>Get started</Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero left aligned 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    flexDirection=\\"column\\"
    p=\\"1rem\\"
    gap=\\"0.75rem\\"
    justifyContent=\\"center\\"
    alignItems=\\"start\\"
    w=\\"400px\\"
    h=\\"400px\\"
  >
    <Box display=\\"flex\\" bgColor=\\"transparent\\" flexDirection=\\"column\\">
      <Text flex=\\"1\\" textAlign=\\"left\\" textColor=\\"#3b82f6\\" fontWeight=\\"700\\">
        The future is here
      </Text>
      <Box display=\\"flex\\">
        <Text fontSize=\\"5xl\\" flex=\\"1\\" textAlign=\\"left\\">
          Create, iterate, inspire.
        </Text>
      </Box>
    </Box>
    <Box display=\\"flex\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"left\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      display=\\"flex\\"
      bgColor=\\"transparent\\"
      flexDirection=\\"row\\"
      alignItems=\\"center\\"
      gap=\\"1.5rem\\"
      mt=\\"1rem\\"
    >
      <Button textAlign=\\"left\\" justifyContent=\\"left\\">
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`hero with bg 1`] = `
"<Frame width={400} height={400}>
  <Box
    display=\\"flex\\"
    flexDirection=\\"column\\"
    p=\\"1rem\\"
    gap=\\"0.75rem\\"
    bgColor=\\"#3b82f6\\"
    justifyContent=\\"center\\"
    alignItems=\\"center\\"
    w=\\"400px\\"
    h=\\"400px\\"
  >
    <Box display=\\"flex\\" bgColor=\\"transparent\\" flexDirection=\\"column\\">
      <Text flex=\\"1\\" textAlign=\\"center\\" textColor=\\"#fff\\" fontWeight=\\"700\\">
        The future is here
      </Text>
      <Box display=\\"flex\\">
        <Text fontSize=\\"5xl\\" flex=\\"1\\" textAlign=\\"center\\" textColor=\\"#fff\\">
          Create, iterate, inspire.
        </Text>
      </Box>
    </Box>
    <Box display=\\"flex\\">
      <Text fontSize=\\"2xl\\" flex=\\"1\\" textAlign=\\"center\\" textColor=\\"#fff\\">
        Turn great ideas into new possibilities.
      </Text>
    </Box>
    <Box
      display=\\"flex\\"
      bgColor=\\"transparent\\"
      flexDirection=\\"row\\"
      alignItems=\\"center\\"
      gap=\\"1.5rem\\"
      mt=\\"1rem\\"
    >
      <Button textColor=\\"#000\\" bgColor=\\"#f1f5f9\\">
        Get started
      </Button>
    </Box>
  </Box>
</Frame>;
"
`;

exports[`icon default 1`] = `
"<Frame width={48} height={48}>
  <Image
    src=\\"https://api.iconify.design/material-symbols/menu.svg\\"
    objectFit=\\"contain\\"
    w=\\"100%\\"
    h=\\"100%\\"
  />
</Frame>;
"
`;

exports[`icon with color 1`] = `
"<Frame width={48} height={48}>
  <Box
    w=\\"100%\\"
    h=\\"100%\\"
    bgColor=\\"#60a5fa\\"
    style={{
      maskImage:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
      WebkitMask:
        'url(https://api.iconify.design/material-symbols/menu.svg) center / contain no-repeat',
    }}
  />
</Frame>;
"
`;

exports[`link with icon 1`] = `
"<Frame width={100} height={40}>
  <Link href=\\"#\\">Test</Link>
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text flex=\\"1\\" textAlign=\\"center\\" textColor=\\"#ef4444\\">
    Hello world
  </Text>
</Frame>;
"
`;

exports[`text escape jsx 1`] = `
"<Frame width={100} height={40}>
  <Text flex=\\"1\\">{'Hello \\"\\\\'<{test}>\\\\'\\" world'}</Text>
</Frame>;
"
`;
